@@ -65,6 +65,7 @@ Even when matching on the main class name or on system properties,
 * Fixed log correlation for log4j2 - {pull}1720[#1720]
 * Fix apm-log4j1-plugin and apm-log4j2-plugin dependency on slf4j - {pull}1723[#1723]
 * Avoid systematic `MessageNotWriteableException` error logging, now only visible in `debug` - {pull}1715[#1715]
+* Fix rounded number format for non-english locales - {pull}1728[#1728]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
